# libpillbig

./: AUTHORS  ChangeLog  Doxyfile.in  Makefile.am  README  configure.ac  doxygen.am
include/: Makefile.am
include/pillbig/: audio.h  common.h  db.h  error.h  file.h  pillbig.h
lib/: Makefile.am  adpcm.c  adpcm.h  audio.c  audio_internal.h  common_internal.h  db.c  error.c  error_internal.h  file.c  file_internal.h  pillbig_internal.h  vag.c  vag.h
m4/: ax_doxygen.m4
share/: Makefile.am
share/pillbig/: pillbig-pc.xml  pillbig-psx.xml  pillbig.dtd
src/: Makefile.am  params.c  params.h  pillbig.c
tests/: Makefile.am  audio.c  db.c  file.c  suite.c
